<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".QuizActivity">

    <TextView
        android:fontFamily="monospace"
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score_0"
         />

    <TextView
        android:fontFamily="monospace"
        android:id="@+id/text_view_question_count"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:text="@string/question_1_x"
         />

    <TextView
        android:id="@+id/text_view_countdown"
        android:fontFamily="monospace"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/_00_30"
        android:textSize="30sp"

        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/ic_baseline_timer_24" />

    <TextView
        android:id="@+id/text_view_question"
        android:freezesText="true"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:text="@string/here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:freezesText="true"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:freezesText="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:freezesText="true"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="16dp"
        android:text="@string/confirm" />

</RelativeLayout>