<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingPage">

    <ImageView
        android:layout_marginTop="200dp"
        android:id="@+id/logo"
        android:layout_width="197dp"
        android:layout_height="136dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_assignment_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:padding="20dp"
        android:text="@string/swipe_anywhere_to_start"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/settings"
        android:onClick="settings"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />



</RelativeLayout>